--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,10 @@
     <string name="invalidPasswordError">Contraseña incorrecta</string>
     <string name="invalidUserError">No existe una cuenta con este correo electrónico</string>
     <string name="invalidEmailFormatError">El formato del correo electrónico no es correcto</string>
+    <string name="open_menu">Abrir menu</string>
+    <string name="logout">Cerrar sesión</string>
+    <string name="auto_theme">Tema automático</string>
+    <string name="light_theme">Tema claro</string>
+    <string name="dark_theme">Tema oscuro</string>
+    <string name="theme">Tema</string>
 </resources>
