--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,10 @@
     <string name="pfp">Imagen de perfil</string>
     <string name="banner">Banner</string>
     <string name="camera">Camara</string>
-    <string name="ok">Ok</string>
+    <string name="ok">OK</string>
+    <string name="camera_permission">Se necesita permisos para usar la cámara.</string>
+    <string name="no_camera">El dispositivo no tiene cámara.</string>
+    <string name="settings">Abrir ajustes</string>
+    <string name="swich_camera">Cambiar de cámara</string>
+    <string name="gallery">Galería</string>
 </resources>
