--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,7 @@
     <string name="settings">Abrir ajustes</string>
     <string name="swich_camera">Cambiar de cámara</string>
     <string name="gallery">Galería</string>
+    <string name="gallery_permission">Conceda los permisos necesarios para acceder a la galería.</string>
+    <string name="no_gallery">Tu dispositivo no tiene galería</string>
+    <string name="use_camera">Usar cámara</string>
 </resources>
